2005-12-31  David Kastrup  <dak@gnu.org>

	* Makefile.in (ELCC, AUCTEX): Put "." in front of load-path to
	avoid picking up outdated `prv-*.el*' files from the installation
	directory.

2005-12-17  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* configure.ac: Bump version number.

2005-10-24  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* configure.ac: Import `TEX' in unquoted form.

2005-10-13  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* configure.ac: Change wrongly used `previewdatadir' to
	`previewlispdir'.
	Change version number in `AC_INIT'.

2005-10-03  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* prv-xemacs.el (preview-check-changes): Delete detached extents.

2005-09-27  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* configure.ac: Document option for specifying AUCTeX startfile as
	--with-previewstartfile, not --with-preview-startfile which does
	not work.
	Use matching package names for determining the kpathsea path
	separator both internally and in the option name which now is
	--with-kpathseasep.
	Fix the quadrigraph for the closing bracket in the
	kpathsesep-related error message.

2005-09-25  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* latex/preview.dtx: Add space for nicer formatting in version
	output.  Adapt checksum.

2005-09-25  David Kastrup  <dak@gnu.org>

	* latex/preview.dtx: Try fixing the release parsing/grouping.

2005-09-25  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* latex/README (CTAN): Bump version number.

	* latex/preview.dtx: Fix case in release tag parsing.

2005-09-24  David Kastrup  <dak@gnu.org>

	* latex/preview.dtx: Try parsing version correctly by treating
	underlines in the release tag properly.

2005-09-24  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* preview.el (preview-version): Extract version number from
	release tag.

2005-08-18  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* configure.ac: Import unquoted variables from top-level configure
	script.

2005-07-15  David Kastrup  <dak@gnu.org>

	* latex/preview.dtx: Don't talk nonsense about the footnote macro,